--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 }
 
 
+
 body{
   background-color: #1B1B1C;
   font-family: 'Righteous';
@@ -899,13 +900,17 @@ section button{
   .services {
     height: 1400px;
   }
+  .services{
+    overflow: hidden;
+    width: 100%;
+  }
 
   .services h1 {
     font-size: 1.2rem;
   }
 
   .services__card {
-    width: 300px;
+    width: 100px;
   }
 }
 
@@ -1258,9 +1263,11 @@ margin-bottom: 0;
   padding: 10%;
 }
 .cont h4 {
-  font-size: 30px;
+  font-size: 20px !important;
   text-transform: uppercase;
-  margin-bottom: 15px;
+  margin-bottom: 55px; 
+  line-height: 1.5 !important;
+
   
 }
 .cont p {
@@ -1385,7 +1392,7 @@ margin-bottom: 0;
   font-style: normal;
   width: 200px;
   font-weight: 450;
-  line-height: 1.306vw;
+  line-height: 8.306vw;
   height: 1.443vh;
   width: fit-content;
   color: #e8e6e6;
@@ -1397,7 +1404,7 @@ margin-bottom: 0;
   font-size: .8VW;
   font-style: normal;
   font-weight: 300;
-  line-height: .8vw;
+  line-height: 8.8vw;
   letter-spacing: 0em;
   text-align: left;
   color: #ffffff;
@@ -1520,6 +1527,26 @@ margin-bottom: 0;
   padding-top:4vh ;
 }
 
+#loadMore {
+  padding-bottom: 30px;
+  padding-top: 30px;
+  text-align: center;
+  width: 100%;
+}
+#loadMore a {
+  background: #feef3c;
+  border-radius: 3px;
+  color: #151516;
+  display: inline-block;
+  padding: 10px 30px;
+  transition: all 0.25s ease-out;
+  -webkit-font-smoothing: antialiased;
+}
+#loadMore a:hover {
+  background-color: #151516;
+  color: #e3e3e3;
+}
+
 
 /* Footer CSS */
 footer{
@@ -1562,7 +1589,7 @@ footer{
 .footer__links {
   width: 100%;
   height: 40vh;
-  max-width: 100000px;
+  max-width: 10000000px;
   display: flex;
   flex-wrap: wrap;
   justify-content:space-between;
@@ -1600,7 +1627,7 @@ footer{
 }
 
 .footer__link--items a:hover {
-  color: #e9e9e9;
+  color: #feef3c;
   transition: 0.3s ease-out;
 }
 
@@ -1956,15 +1983,13 @@ footer{
 
 .values-btn{
   border: none;
-  width: 22.375vw;
+  width: 40%;
   text-decoration: none;
-  padding: 10px; 
-  font-family: 'Righteous', cursive;
-  background-color: #FFF112;
-  margin-top:80px ;
-  cursor: pointer;
-  position: relative;
-  left: 33vw;
+  text-align: center;
+  padding: auto;
+  justify-content: center;
+  
+  
 }
 
 .values-btn a{
@@ -2013,101 +2038,93 @@ footer{
 .grid-cointainer{
   display: grid;
   grid-template-columns: auto auto auto;
-  width: 70vw;
-  margin-left:1vw ;
-  height: 90vh;
-  padding-top: 10vh;
+  max-width: 100%;
 }
 
-.grid-cointainer .grid-item{
-  position: relative;
-  cursor: pointer;
-  margin-bottom: 15px;
-  box-shadow: 15px 15px 40px rgba(0, 0, 0, 0.15);
-  height: 250px;
-  overflow: hidden;    
-}
 
-.grid-cointainer .grid-item::before{
-  content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 5px;
-    height: 100%;
-    transition: all 0.3s ease-in-out;
-}
-
-.grid-cointainer .grid-item img{
-  width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.grid-cointainer .grid-item:hover::before{
-  top: 0;
-  right: calc(100% - 5px);
-  z-index: 10;
-}
-
-.grid-cointainer .grid-item .img-text{
-  position: absolute;
-    display: flex;
-	justify-content: center;
-	align-items: center;
-	background: rgba(36, 34, 34, 0.9);
-	width: 100%;
-	height: 100%;
-	top: 0;
-	right: 100%;
-	transition: all 0.5s ease-in-out;	
-}
-
-.grid-cointainer .grid-item:hover .img-text{
-  top: 0;
-    right: 0;
-}
 .grid-item{
-  padding-top: 3.4375vw;
-  padding-right: 2.75vw;
+  max-width: 400%;
 }
+
 
 
 .grid-item h4{
   font-family: 'Righteous';
-  font-size: 1VW;
+  font-size: 2vw;
   font-style: normal;
   width: 200px;
   font-weight: 450;
-  line-height: 1.306vw;
+  line-height: 2.306vw;
   height: 1.443vh;
   width: fit-content;
   color: #e8e6e6;
 }
 
 .grid-item p{
-  font-family: 'Righteous';
-  padding-top: 10px;
-  font-size: .8VW;
+ 
+  font-size: 2.8VW;
   font-style: normal;
-  font-weight: 300;
-  line-height: .8vw;
+  
+  line-height: 2.8vw;
   letter-spacing: 0em;
-  text-align: left;
-  color: #ffffff;
-
-}
-
-
 }
 
 
 
-@media all  {
-  body{
-    overflow-x: hidden;
+.contact{
+  width: 100%;
+  height: 15.25rem;
+  
+  background: linear-gradient(180deg, rgb(79, 77, 77) 0%, rgba(255, 255, 255, 0) 100%);
+  border-radius: 50px;
+  padding: 5% 5%;
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
+
+
+.contact input{
+  width: 20rem;
+  height: 54px;
+  border-radius: 50px;
+  border: none;
+  background: rgba(26, 24, 24, 0.371);
+  padding-left: 10%;
+}
+
+.contact input::placeholder{
+  font-size: 1rem;
+  
+}
+
+.input-div{
+  position: relative;
+}
+
+.send-div{
+  width: 5.813rem;
+  height: 54px;
+  background-color: #feef3c;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+
+
 .navbar{
   position:sticky!important;
 }
 }
+
+@media all {
+  body{
+    overflow-x: hidden;
+}
+}
+
